[package]
name = "fractal-landscapes-rust"
version = "0.1.0"
edition = "2018"
author = "Jonas Kriegl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr="0.4.1"
rand="0.8.4"
linreg="0.2.0"
image="0.23.14"
emath="0.15.0"
rayon="1.5.1"
chrono = "0.4.19"